- Added buffer validation checks to auth ticket functions.
- Added auth ticket test functions to SteamNetworkingTestApp.
- Added two missing SteamRemoteStorage.updatePublishedFile*() functions.
- Added public functions to serialize SteamID as plain 64 bit value.
- Added ISteamUGC-based workshop functions.

[1.2.3]
- Fixed native pointers possibly truncated on Windows 64 bit.

[1.2.2]
- Updated to Steamworks SDK v1.35.
- Added buffer validation check to SteamUtils.getImageRGBA().
- Added SteamMatchmaking interface, implementing most lobby functions.
- Added SteamMatchmakingTestApp.
- API change: added SteamFriendsCallback.onGameLobbyJoinRequested().
- API change: added SteamFriendsCallback.onGameOverlayActivated(), onAvatarImageLoaded().

[1.2.1]
- Added UserStatsStored, UserAchievementStored callbacks.
- Added a few SteamApps utility functions.

[1.2.0]
- Prebuilt libraries now compiled with Steamworks SDK v1.34.
- Native code generator moved to separate sub-project. Removes runtime dependency on gdx-jnigen.
- Moved documentation to GitHub pages: http://code-disaster.github.io/steamworks4j/
- Added SteamUGC.getItemInstallInfo(), getItemDownloadInfo(), requestUGCDetails(), createQueryUGCDetailsRequest().
- Added warning message hook.
- Added SteamAPI.restartAppIfNecessary().
- Added auth session API to SteamUser. This also adds a SteamUserCallback interface.
- Added SteamHTTP interface
- Added SteamHTTPTestApp which calls some basic Steam Web API functions.
- API change: moved some enums from SteamGameServer to SteamAuth.

[1.1.0]
- Prebuilt libraries now compiled with Steamworks SDK v1.33b.
- Added SteamUserStats.findOrCreateLeaderboard(), getLeaderboardSortMethod(), getLeaderboardDisplayType().
- Added SteamUGC.createQueryAllUGCRequest(), subscribeItems(), unsubscribeItems(), getNumSubscribedItems(), getSubscribedItems(). [thanks, titoasty]
- Added SteamFriends API to retrieve avatar images.