@@ -1,8 +1,7 @@
 package com.codedisaster.steamworks;
 
-/**
- * Made package-private for now, as the callback adapter is used internally only for
- * handling debug message hooks.
- */
-/*public*/ interface SteamUtilsCallback {
+public interface SteamUtilsCallback {
+
+	void onSteamShutdown();
+
 }
